fix bottom mask flicker on ios safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -509,6 +509,8 @@ body[data-format="double"] .page-container.center-page.exit-to-left {
   -o-transform: rotateX(180deg);
   -ms-transform: rotateX(180deg);
   transform: rotateX(180deg);
+  -webkit-transform: translate3d(0, 0, 0);
+/* To fix a z-indexing position in Safari + iOS, this enables hardware acceleration but doesn't change the styling */
   bottom: -1px;
 /* To cover up some small clipping that occurs */
 }
